# docs/swagger.json
@@ -36,7 +36,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/pkg_health.Status"
+                            "$ref": "#/definitions/health.Status"
                         }
                     }
                 }
@@ -77,7 +77,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                                    "$ref": "#/definitions/customresponse.CustomResponse"
                                 },
                                 {
                                     "type": "object",
@@ -85,7 +85,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/github_com_srcndev_message-service_internal_dto.MessageResponse"
+                                                "$ref": "#/definitions/dto.MessageResponse"
                                             }
                                         }
                                     }
@@ -96,7 +96,7 @@
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                            "$ref": "#/definitions/customresponse.CustomResponse"
                         }
                     }
                 }
@@ -120,7 +120,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_srcndev_message-service_internal_dto.CreateMessageRequest"
+                            "$ref": "#/definitions/dto.CreateMessageRequest"
                         }
                     }
                 ],
@@ -130,13 +130,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                                    "$ref": "#/definitions/customresponse.CustomResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/github_com_srcndev_message-service_internal_dto.MessageResponse"
+                                            "$ref": "#/definitions/dto.MessageResponse"
                                         }
                                     }
                                 }
@@ -146,13 +146,73 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                            "$ref": "#/definitions/customresponse.CustomResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                            "$ref": "#/definitions/customresponse.CustomResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/messages/sent": {
+            "get": {
+                "description": "Get a list of sent messages with pagination",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "messages"
+                ],
+                "summary": "List sent messages",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "Offset",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/customresponse.CustomResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/dto.MessageResponse"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/customresponse.CustomResponse"
                         }
                     }
                 }
@@ -186,13 +246,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                                    "$ref": "#/definitions/customresponse.CustomResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/github_com_srcndev_message-service_internal_dto.MessageResponse"
+                                            "$ref": "#/definitions/dto.MessageResponse"
                                         }
                                     }
                                 }
@@ -202,19 +262,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                            "$ref": "#/definitions/customresponse.CustomResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                            "$ref": "#/definitions/customresponse.CustomResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                            "$ref": "#/definitions/customresponse.CustomResponse"
                         }
                     }
                 }
@@ -245,7 +305,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_srcndev_message-service_internal_dto.UpdateMessageRequest"
+                            "$ref": "#/definitions/dto.UpdateMessageRequest"
                         }
                     }
                 ],
@@ -255,13 +315,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                                    "$ref": "#/definitions/customresponse.CustomResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/github_com_srcndev_message-service_internal_dto.MessageResponse"
+                                            "$ref": "#/definitions/dto.MessageResponse"
                                         }
                                     }
                                 }
@@ -271,19 +331,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                            "$ref": "#/definitions/customresponse.CustomResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                            "$ref": "#/definitions/customresponse.CustomResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                            "$ref": "#/definitions/customresponse.CustomResponse"
                         }
                     }
                 }
@@ -313,25 +373,25 @@
                     "204": {
                         "description": "No Content",
                         "schema": {
-                            "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                            "$ref": "#/definitions/customresponse.CustomResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                            "$ref": "#/definitions/customresponse.CustomResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                            "$ref": "#/definitions/customresponse.CustomResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                            "$ref": "#/definitions/customresponse.CustomResponse"
                         }
                     }
                 }
@@ -356,7 +416,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                                    "$ref": "#/definitions/customresponse.CustomResponse"
                                 },
                                 {
                                     "type": "object",
@@ -375,13 +435,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                            "$ref": "#/definitions/customresponse.CustomResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                            "$ref": "#/definitions/customresponse.CustomResponse"
                         }
                     }
                 }
@@ -406,7 +466,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                                    "$ref": "#/definitions/customresponse.CustomResponse"
                                 },
                                 {
                                     "type": "object",
@@ -444,7 +504,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                                    "$ref": "#/definitions/customresponse.CustomResponse"
                                 },
                                 {
                                     "type": "object",
@@ -463,13 +523,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                            "$ref": "#/definitions/customresponse.CustomResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.CustomResponse"
+                            "$ref": "#/definitions/customresponse.CustomResponse"
                         }
                     }
                 }
@@ -477,20 +537,41 @@
         }
     },
     "definitions": {
-        "github_com_srcndev_message-service_internal_domain.MessageStatus": {
+        "customresponse.CustomResponse": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "error": {
+                    "$ref": "#/definitions/customresponse.ErrorInfo"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "customresponse.ErrorInfo": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.MessageStatus": {
             "type": "string",
             "enum": [
                 "pending",
-                "sent",
-                "failed"
+                "sent"
             ],
             "x-enum-varnames": [
                 "StatusPending",
-                "StatusSent",
-                "StatusFailed"
+                "StatusSent"
             ]
         },
-        "github_com_srcndev_message-service_internal_dto.CreateMessageRequest": {
+        "dto.CreateMessageRequest": {
             "type": "object",
             "required": [
                 "content",
@@ -499,8 +580,8 @@
             "properties": {
                 "content": {
                     "type": "string",
-                    "maxLength": 500,
-                    "example": "Hello"
+                    "maxLength": 160,
+                    "example": "Hello World"
                 },
                 "phoneNumber": {
                     "type": "string",
@@ -508,7 +589,7 @@
                 }
             }
         },
-        "github_com_srcndev_message-service_internal_dto.MessageResponse": {
+        "dto.MessageResponse": {
             "type": "object",
             "properties": {
                 "content": {
@@ -538,7 +619,7 @@
                 "status": {
                     "allOf": [
                         {
-                            "$ref": "#/definitions/github_com_srcndev_message-service_internal_domain.MessageStatus"
+                            "$ref": "#/definitions/domain.MessageStatus"
                         }
                     ],
                     "example": "pending"
@@ -549,12 +630,12 @@
                 }
             }
         },
-        "github_com_srcndev_message-service_internal_dto.UpdateMessageRequest": {
+        "dto.UpdateMessageRequest": {
             "type": "object",
             "properties": {
                 "content": {
                     "type": "string",
-                    "maxLength": 500
+                    "maxLength": 160
                 },
                 "phoneNumber": {
                     "type": "string"
@@ -562,41 +643,17 @@
                 "status": {
                     "enum": [
                         "pending",
-                        "sent",
-                        "failed"
+                        "sent"
                     ],
                     "allOf": [
                         {
-                            "$ref": "#/definitions/github_com_srcndev_message-service_internal_domain.MessageStatus"
+                            "$ref": "#/definitions/domain.MessageStatus"
                         }
                     ]
                 }
             }
         },
-        "github_com_srcndev_message-service_pkg_customresponse.CustomResponse": {
-            "type": "object",
-            "properties": {
-                "data": {},
-                "error": {
-                    "$ref": "#/definitions/github_com_srcndev_message-service_pkg_customresponse.ErrorInfo"
-                },
-                "success": {
-                    "type": "boolean"
-                }
-            }
-        },
-        "github_com_srcndev_message-service_pkg_customresponse.ErrorInfo": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "string"
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "pkg_health.Status": {
+        "health.Status": {
             "type": "object",
             "properties": {
                 "status": {
